Update: Added image and fixed the responsiveness
## What?
I added an image and fixed the responsiveness of this project.

## Why?
This is a practice I made to close the CSS module in my META course.

## How?
In this update I tried to practice grids and flexbox. Also I put on practice the max and min width properties. Also I tried to use a minimalist design.

## Testing?

## Screenshots

## Anything Else? (optional)
I had troubles with the footer and trying to put a display fixed but the content of the main element was hidden by it.

I learned how to make responsible images as the one is included on the page.

--- a/styles.css
+++ b/styles.css
@@ -1,62 +1,124 @@
-* { font-family: 'Playfair Display', serif; 
+* {
+    font-family: 'Playfair Display', serif;
     margin: 0;
     box-sizing: border-box;
-    background-color:  #C5CACA;
-}
-
-h1 {
+  }
+  
+  h1 {
     font-size: 2rem;
-}
-
-h2 {
+  }
+  
+  h2 {
     font-size: 1.5rem;
-}
-
-nav {
+  }
+  
+  body, html {
+    max-width: 1200px;
+    margin: 0 auto;
+    max-height: 100vh;
+  }
+  
+  nav {
+    font-size: 1.2em;
     display: flex;
     align-items: center;
     justify-content: center;
-    align-self: 100%;
     gap: 1em;
-    padding-top: 1em;
-    max-width: 25em;
-    margin: auto;    
+    padding: 1em 0;
+    max-width: 100vw;
+    margin: auto;
     flex-wrap: wrap;
-}
-
-nav ul {
+  }
+  
+  nav ul {
     list-style-type: none;
-    min-width: auto;
-    padding-left: 0px;
-    
-}
-
-nav ul:hover {
+    padding-left: 0;
+  }
+  
+  nav ul:hover {
     cursor: pointer;
-
-}
-
-header {
+    color: rgb(140, 148, 151);
+  }
+  
+  header {
     display: flex;
     justify-content: center;
-    margin-top: 1em;
+    margin: 1em 0;
+  }
+  
+  article {
+
+  }
+
+  .promotion {
+    text-align: center;
+
+  }
+  
+  section {
+    padding: 1em;
+  }
+  
+  /* footer {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 1em;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    height: 60px;
+    justify-content: center;
+    align-items: center;
+    max-width: 100vw;
+    margin: 0 auto;
+    background-color: rgba(147, 138, 138, 0.2);
+    backdrop-filter: blur(10px);
+  } */
+
+/* Probando algo nuevo a ver */
+
+  footer {
+    display: flex;
+    justify-content: space-between;
+    padding: 1em;
+  }
+
+  footer img {
+    max-width: 20%;
+  }
+  
+  small {
+    color: #777777;
+    white-space: nowrap;
+    width: 40%;
+  }
+
+.parts {
+  display: grid;
+  justify-content: space-between;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: auto;
+  gap: 1em;
 }
 
 main {
-    display: grid;
-    grid-template-columns: repeat(3, 50%);
-    grid-template-rows: repeat(2, 70%);
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
+  min-height: 100vh;
+  width: 100%;
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 0 1em;
 }
 
-.promotion {
-    grid-area: 1 / 1 / 1 / span 3;
-}
 
-.parts {
-    grid-area: 2 / 1 / span 3 / span 3;
-    display: flex;
-}
-
-footer {
-    display: block;
+.promotion img {
+  margin-top: 5%;
+  max-width: 50%;
+  min-width: 10px;
 }
